Feat: Entire architecture of user fixed, now the user flow is logically correct